force-app/main/default/objects/Survey__c/fields/Autofill_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Autofill_Configuration__c</fullName>
    <label>Autofill Configuration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>