force-app/main/default/objects/Survey__c/fields/Complete_Text__c.field-meta.xml
<CustomField>
    <fullName>Complete_Text__c</fullName>
    <label>Complete Text(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>