force-app/main/default/objects/Survey__c/fields/Completed_Html__c.field-meta.xml
<CustomField>
    <fullName>Completed_Html__c</fullName>
    <label>Completed Html(NEW)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>