force-app/main/default/objects/Survey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description(NEW)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>