force-app/main/default/objects/Survey__c/fields/Focus_First_Question_Automatic__c.field-meta.xml
<CustomField>
    <fullName>Focus_First_Question_Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus First Question Automatic(NEW)</label>
    <type>Checkbox</type>
</CustomField>