force-app/main/default/objects/Survey__c/fields/Form_JSON__c.field-meta.xml
<CustomField>
    <fullName>Form_JSON__c</fullName>
    <description>survey json expects the questions in an order, so this field is used to save the whole json (temporarily).</description>
    <label>Form JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>