force-app/main/default/objects/Survey__c/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <label>Integration Setting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>