force-app/main/default/objects/Survey__c/fields/Logo_Fit__c.field-meta.xml
<CustomField>
    <fullName>Logo_Fit__c</fullName>
    <label>Logo Fit(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>