force-app/main/default/objects/Survey__c/fields/Logo_Position__c.field-meta.xml
<CustomField>
    <fullName>Logo_Position__c</fullName>
    <label>Logo Position(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>