force-app/main/default/objects/Survey__c/fields/Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>Object_Setting__c</fullName>
    <label>Object Setting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>