force-app/main/default/objects/Survey__c/fields/Questions_On_Page_Mode__c.field-meta.xml
<CustomField>
    <fullName>Questions_On_Page_Mode__c</fullName>
    <label>Questions On Page Mode(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>