force-app/main/default/objects/Survey__c/fields/Show_Preview_Before_Complete__c.field-meta.xml
<CustomField>
    <fullName>Show_Preview_Before_Complete__c</fullName>
    <label>Show Preview Before Complete(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>