force-app/main/default/objects/Survey__c/fields/Show_Question_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Show_Question_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Question Numbers(NEW)</label>
    <type>Checkbox</type>
</CustomField>