force-app/main/default/objects/Survey__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>