force-app/main/default/objects/Survey__c/fields/Width_Mode__c.field-meta.xml
<CustomField>
    <fullName>Width_Mode__c</fullName>
    <label>Width Mode(NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>